# QNS-2Q

./: .gitignore  CLAUDE.md  DEPENDENCY_MAP.md  FIGURE_PROVENANCE.md  GEMINI.md  NOISE_MODEL_SPEC.md  PAPER_CODE_AUDIT.md  QNSPlots.py  README.md  RECONCILIATION_PLAN.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
DraftRun_Boring/: params.npz  results.npz  specs.npz
DraftRun_BoringSPAM/: params.npz  results.npz  specs.npz
DraftRun_HighSPAM/: params.npz  results.npz  specs.npz
DraftRun_LowSPAM/: params.npz  results.npz  specs.npz
DraftRun_M_hat/: params.npz  results.npz  specs.npz
DraftRun_Mmit_hat/: params.npz  results.npz  specs.npz
DraftRun_NoSPAM/: infs_known.npz  infs_known_2.npz  infs_known_3.npz  infs_known_4.npz  infs_known_cz.npz  infs_opt.npz  infs_opt_1.npz  infs_opt_2.npz  infs_opt_3.npz  infs_opt_4.npz  infs_opt_constrained.npz  infs_opt_cz.npz  optimize.npz  optimizeLog.npz  params.npz  results.npz  specs.npz
DraftRun_NoSPAM_Boring/: infs_known_id_v4_M1.npz  infs_known_id_v4_M128.npz  infs_known_id_v4_M16.npz  infs_known_id_v4_M2.npz  infs_known_id_v4_M256.npz  infs_known_id_v4_M32.npz  infs_known_id_v4_M4.npz  infs_known_id_v4_M512.npz  infs_known_id_v4_M64.npz  infs_known_id_v4_M8.npz  infs_opt_id_v4_M1.npz  infs_opt_id_v4_M128.npz  infs_opt_id_v4_M16.npz  infs_opt_id_v4_M2.npz  infs_opt_id_v4_M256.npz  infs_opt_id_v4_M32.npz  infs_opt_id_v4_M4.npz  infs_opt_id_v4_M512.npz  infs_opt_id_v4_M64.npz  infs_opt_id_v4_M8.npz  optimizeLog.npz  optimizeLog_v2.npz  params.npz  results.npz  simulated_spectra.npz  specs.npz
Run_1/: params.npz
(+363 files in other folders)
